--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ Jinja2==3.0.3
 Mako==1.1.6
 MarkupSafe==2.1.0
 orjson==3.6.7
+passlib==1.7.4
+psycopg2==2.9.3
 psycopg2-binary==2.9.3
 pydantic==1.9.0
 python-dotenv==0.19.2
