--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.0.4
 dnspython==2.2.1
+ecdsa==0.17.0
 email-validator==1.1.3
 fastapi==0.75.0
 greenlet==1.1.2
@@ -26,13 +27,16 @@ pluggy==1.0.0
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
 py==1.11.0
+pyasn1==0.4.8
 pydantic==1.9.0
 pyparsing==3.0.7
 pytest==7.0.1
 python-dotenv==0.19.2
+python-jose==3.3.0
 python-multipart==0.0.5
 PyYAML==5.4.1
 requests==2.27.1
+rsa==4.8
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.32
