--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 alembic==1.7.6
 anyio==3.5.0
 asgiref==3.5.0
+asttokens==2.0.5
 attrs==21.4.0
+backcall==0.2.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.0.4
+decorator==5.1.1
 dnspython==2.2.1
 ecdsa==0.17.0
 email-validator==1.1.3
+executing==0.8.3
 fastapi==0.75.0
 greenlet==1.1.2
 h11==0.13.0
@@ -16,19 +20,30 @@ idna==3.3
 importlib-metadata==4.11.2
 importlib-resources==5.4.0
 iniconfig==1.1.1
+ipdb==0.13.9
+ipython==8.1.1
 itsdangerous==2.1.1
+jedi==0.18.1
 Jinja2==3.0.3
 Mako==1.1.6
 MarkupSafe==2.1.0
+matplotlib-inline==0.1.3
 orjson==3.6.7
 packaging==21.3
+parso==0.8.3
 passlib==1.7.4
+pexpect==4.8.0
+pickleshare==0.7.5
 pluggy==1.0.0
+prompt-toolkit==3.0.28
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
+ptyprocess==0.7.0
+pure-eval==0.2.2
 py==1.11.0
 pyasn1==0.4.8
 pydantic==1.9.0
+Pygments==2.11.2
 pyparsing==3.0.7
 pytest==7.0.1
 python-dotenv==0.19.2
@@ -40,13 +55,17 @@ rsa==4.8
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.32
+stack-data==0.2.0
 starlette==0.17.1
+toml==0.10.2
 tomli==2.0.1
+traitlets==5.1.1
 typing-extensions==4.1.1
 ujson==4.3.0
 urllib3==1.26.8
 uvicorn==0.15.0
 uvloop==0.16.0
 watchgod==0.7
+wcwidth==0.2.5
 websockets==10.2
 zipp==3.7.0
